# AI-Resume-Generator-Skill-AI-skill

./: README.md  README_CN.md  SKILL.md  builder.py  index.html  template_1page.css  template_multipage.css
1-template-to-md/: SKILL.md
1-template-to-md/mcp-server/: pyproject.toml
2-transcriptor/mcp-server/: pyproject.toml
2-transcriptor/mcp-server/src/mcp_transcriptor/: server.py
3-pdf-generator/: SKILL.md
3-pdf-generator/references/: multi-page-no-photo-mode.md  multi-page-with-photo-mode.md  single-page-mode.md
3-pdf-generator/resources/: prompt_workflow.md  template_multipage-2.css  template_multipage.css
mcp-server/: pyproject.toml
mcp-server/src/mcp_resume_pipeline/: server.py
resume-pipeline/: SKILL.md
resume-pipeline/1-template-to-md/: SKILL.md  convert.py
resume-pipeline/2-transcriptor/: SKILL.md
resume-pipeline/2-transcriptor/references/: candidate-knowledge-base.md  domain-role-examples.md
resume-pipeline/3-pdf-generator/: SKILL.md  generate_html.py  index.html  measure_local.py
resume-pipeline/3-pdf-generator/references/: multi-page-mode.md  multi-page-no-photo-mode.md  multi-page-with-photo-mode.md  single-page-mode.md  single-page-photo-mode.md
resume-pipeline/3-pdf-generator/resources/: prompt_workflow.md  requirements.txt  template_1page.css  template_1page_photo.css  template_multipage.css
resume-pipeline/3-pdf-generator/scripts/: render_multipage_no_photo.py  render_multipage_with_photo.py  render_single_page_photo_sample.py
resume-pipeline/validators/: validate_stage2.py  validate_stage3.py
validators/: validate_stage2.py
(+2 files in other folders)
