[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-template-to-md"
version = "2.0.0"
description = "文档转 Markdown 的 MCP Service（带自动修复、重试、降级）"
readme = "../SKILL.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pymupdf4llm",
    "pymupdf",
    "pdfplumber",
    "python-docx",
    "pypandoc",
    "chardet",
    "beautifulsoup4"
]

[project.scripts]
mcp-template-to-md = "mcp_template_to_md.server:main"
